# mnesis

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LLM_Wiki_v2_Docker_Deployment_Prompts.md  LLM_Wiki_v2_Phase2_Prompts.md  LLM_Wiki_v2_Phase3_Prompts.md  LLM_Wiki_v2_PoC_Prompts.md  Makefile  README.md  docker-compose.yml  mnesis_Docker_Deployment_Prompts.md  mnesis_Phase2_Prompts.md  mnesis_Phase3_Prompts.md  mnesis_PoC_Prompts.md  pyproject.toml
docker/: entrypoint.sh  maintenance.sh
docs/: OKF.md  OPS.md
prompts/: Mnesis_Action_Agents_Prompts.md  Mnesis_Agent_Layer_Prompts.md  Mnesis_Agentic_Foundation_Prompts.md  Mnesis_External_Send_Channel_Prompts.md  Mnesis_Maintenance_Agents_Prompts.md  Mnesis_Multitenancy_Prompts.md  Mnesis_WebUI_Graph_Interaction_Prompts.md  Mnesis_WebUI_Ingestion_Prompts.md  Mnesis_WebUI_Logo_Prompt.md  Mnesis_WebUI_Prompts.md  Mnesis_Writing_Agents_Prompts.md  mnesis_PoC_Prompts.md
scripts/: demo_end_to_end.py  demo_phase2.py  demo_phase3.py  seed.py  smoke_action_agent.sh  smoke_dream_cycle.sh  smoke_notes_inbox.sh  verify_okf.py
src/llmwiki/: __init__.py  cli.py  config.py  store.py
src/mnesis/: __init__.py  account.py  admin.py  audit.py  auth.py  authz.py  cli.py  cli_auth.py  confidence.py  config.py  filters.py  graph.py  graph_lint.py  identity.py  ingest.py  lifecycle.py  llm.py  maintenance.py  mcp_server.py  okf.py  okf_bundle.py  providers.py  quotas.py  search.py  seed.py  state.py  store.py  tenancy.py  tokens.py  usermgmt.py  vaults.py  vocab.py  webapi.py  webauth.py
src/mnesis_agent/: __init__.py  audit.py  cli.py  config.py  daemon.py  fake_tools.py  local_tools.py  loop.py  mcp_client.py  memory.py  policy.py  provider.py  registry.py  runner.py
src/mnesis_agents/: __init__.py  action_agent.py  action_gate.py  audit.py  base.py  channels.py  cli.py  config.py  egress.py  email_channel.py  governance.py  governed.py  knowledge.py  maintenance_agent.py  models.py  proposals.py  registry.py  reports.py  runner.py  secret_scan.py  send_audit.py  tenancy.py  writing_agent.py  writing_pipeline.py
src/mnesis_llm/: __init__.py  factory.py
tests/: conftest.py  test_action_agent.py  test_action_email.py  test_action_runtime.py  test_admin_user_api.py  test_admin_user_drills.py  test_admin_user_ui.py  test_agent_tenancy.py  test_approval_gate.py  test_archetypes.py  test_auth.py  test_base_agent.py  test_bootstrap.py  test_brief_skill.py  test_channels.py  test_cli_auth.py  test_confidence.py  test_dream_cycle_m4.py  test_dream_cycle_runtime.py  test_e2e.py  test_egress_policy.py  test_email_channel.py  test_email_rollout.py  test_external_gate.py  test_filters.py  test_first_login.py  test_governance.py  test_graph.py  test_graph_backend_contract.py  test_graph_lint.py  test_graph_mcp.py  test_graph_query.py  test_identity_core.py  test_ingest.py  test_ingest_lifecycle.py  test_ingest_plan_apply.py  test_ingest_relations.py  test_integration.py  test_isolation_drills.py  test_knowledge.py  (+63 more)
ui/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/docker-entrypoint.d/: 40-mnesis-auth.sh  41-mnesis-upload.sh
ui/public/: config.js
ui/src/: App.tsx  config.ts  index.css  main.tsx  (+2 more)
(+70 files in other folders)
