[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnesis"
version = "0.1.0"
description = "mnesis — a compounding knowledge base for AI agents (Phase-1 MVP PoC)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "mcp",
    "python-frontmatter",
    "pyyaml",
    "python-multipart",
    "pytest",
]

[project.scripts]
mnesis = "mnesis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
