[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnesis"
version = "0.1.0"
description = "mnesis — a compounding knowledge base for AI agents (Phase-1 MVP PoC)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "httpx",
    "mcp",
    "python-frontmatter",
    "pyyaml",
    "python-multipart",
    "pytest",
]

[project.optional-dependencies]
# The LangGraph agentic layer (mnesis_agents). Its CORE — enough to import the
# package and run the deterministic stub with NO provider keys and NO network.
agents = [
    "langgraph",
    "langchain",
    "langchain-core",
    "langchain-mcp-adapters",   # Mnesis tools over MCP (F2)
    "langgraph-checkpoint-sqlite",  # durable agent state/threads (F6, default)
    "langsmith",                # opt-in tracing (F6); off unless its env is set
]
# Provider extras — install only the one(s) you use. Each pulls the matching
# LangChain integration; the model factory raises a clear error if you select a
# provider whose extra isn't installed.
agents-openai = ["langchain-openai"]      # also serves provider=openai_compatible
agents-anthropic = ["langchain-anthropic"]
agents-google = ["langchain-google-genai"]
agents-mistral = ["langchain-mistralai"]
agents-bedrock = ["langchain-aws"]
agents-ollama = ["langchain-ollama"]
# Optional Postgres-backed checkpointer (default is SQLite, bundled above).
agents-postgres = ["langgraph-checkpoint-postgres"]
# Convenience: every provider at once.
agents-all = [
    "langchain-openai",
    "langchain-anthropic",
    "langchain-google-genai",
    "langchain-mistralai",
    "langchain-aws",
    "langchain-ollama",
]

[project.scripts]
mnesis = "mnesis.cli:main"
mnesis-agent = "mnesis_agent.cli:main"
mnesis-agents = "mnesis_agents.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the bundled example Agent Skill (SKILL.md + references/ + scripts/).
"mnesis_agents.skills" = ["bundled/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
